리스트요소제거 추가작업

--- a/python02.ipynb
+++ b/python02.ipynb
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "98be3477-e062-4b29-9689-dfec6289ab5e",
    "metadata": {},
    "outputs": [],
@@ -636,10 +636,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3545a773-3b85-4897-8c50-3ec3e13916aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['맨앞']\n",
+      "['-1인덱스', '맨앞']\n",
+      "['맨앞', '-1인덱스', '맨앞']\n",
+      "['맨앞', '-1인덱스', '맨앞', '제일 끝']\n"
+     ]
+    }
+   ],
    "source": [
     "ex.insert(0,'맨앞')\n",
     "print(ex)\n",
@@ -647,9 +658,17 @@
     "print(ex)\n",
     "ex.insert(0,'맨앞')\n",
     "print(ex)\n",
-    "ex.insert(0,'맨앞')\n",
+    "ex.insert(len(ex),'제일 끝')\n",
     "print(ex)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caca7b5b-3857-4d00-9a8a-80f1c02e703c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
