--- a/python02.ipynb
+++ b/python02.ipynb
@@ -664,8 +664,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "caca7b5b-3857-4d00-9a8a-80f1c02e703c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 요소제거 - remove\n",
+    "a = [1, 2 ,3 ,1 ,2, 3]\n",
+    "a.remove(3)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f5d69fd7-f837-4a4a-afed-81a3323ed37b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "받은거 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 요소 끄집어 내기 - pop\n",
+    "a = [1 ,2 ,3]\n",
+    "hand = a.pop()\n",
+    "print(a)\n",
+    "print(\"받은거\", hand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9c2f9331-356d-47b1-8d2b-6301e24aad6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "받은거 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "hand = a.pop() # 리턴값을 받음\n",
+    "print(a)\n",
+    "print(\"받은거\", hand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85776de-23b7-4382-b388-8166577d3eb5",
    "metadata": {},
    "outputs": [],
    "source": []
