--- a/python02.ipynb
+++ b/python02.ipynb
@@ -729,8 +729,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b85776de-23b7-4382-b388-8166577d3eb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트에 포함된 요소 x의 개수 세기\n",
+    "st = \"안녕하세요 반가워요\"\n",
+    "print(st.count(\"요\"))\n",
+    "a = [1, 2, 3 ,1, 1, 1, 2, 3, 4,5 ,23 ,4, 15, 1, 2,]\n",
+    "print(a.count(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "05ab4c0d-eb55-431d-bba3-0d2313352f2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[11, 22, 33, 44, 55, 66]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 확장\n",
+    "a = [1, 2, 3]\n",
+    "a.extend([4,5])\n",
+    "print(a)\n",
+    "b = [11, 22, 33]\n",
+    "c = [44, 55, 66]\n",
+    "print(b + c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b6326331-1eb4-41b4-a342-45d0cd8ab9a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 장바구니\n",
+    "bag = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d1bbc423-a467-48b4-aee2-506ec09b29bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "필요한 항목을 넣어주세요. :  술\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "장바구니에는 ['호박', '감자', '술']들이 있습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create 생성\n",
+    "inp = input('필요한 항목을 넣어주세요. : ')\n",
+    "bag.append(inp)\n",
+    "print(f'장바구니에는 {bag}들이 있습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "35cb4454-82d9-4cb8-abf9-8f49ee1b8bad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "감자을(를) 꺼내서 장바구에 ['술']이(가) 남았습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FIFO 출력(큐 출력)\n",
+    "hand = bag.pop(0)\n",
+    "print(f'{hand}을(를) 꺼내서 장바구에 {bag}이(가) 남았습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3e1e7165-ddbd-4c1a-840d-5fad5ba7c72b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "바구니에 ['호박', '감자', '술', '맥주', '피자'] 물품이 있습니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "꺼내고 싶은 물품을 입력하세요. 감자\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "바구니에서 감자을(를) 꺼내어 ['호박', '술', '맥주', '피자']이(가) 남았습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 선택출력\n",
+    "bag = ['호박', '감자', '술', '맥주', '피자']\n",
+    "print(f\"바구니에 {bag} 물품이 있습니다.\")\n",
+    "bring = input('꺼내고 싶은 물품을 입력하세요.')\n",
+    "hand2 = bag.pop(bag.index(bring))\n",
+    "print(f'바구니에서 {hand2}을(를) 꺼내어 {bag}이(가) 남았습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2babb100-34a9-41a5-85a1-7d55a873bee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33을(를) 제거 하였습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 테스트 remove에는 리턴값이 없다.\n",
+    "choice = 33\n",
+    "a = [11, 22, 33, 44, 55, 66]\n",
+    "a.remove(choice)\n",
+    "print(f'{choice}을(를) 제거 하였습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a589e041-9814-46e4-b801-98e10980163d",
    "metadata": {},
    "outputs": [],
    "source": []
