딕셔너리 수업

--- a/python02.ipynb
+++ b/python02.ipynb
@@ -896,10 +896,586 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a589e041-9814-46e4-b801-98e10980163d",
+   "id": "d498939d-6e1f-4f72-9a62-e54cb18fd1bb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bag = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a589e041-9814-46e4-b801-98e10980163d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "바구니에 ['호박', '감자', '소주', '맥주', '피자'] 물품이 있습니다.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "추가 할 물품을 지정해 주세요. 맥주\n",
+      "어느 물품의 뒤에 넣어둘까요? 감자\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "장바구니에는 ['호박', '감자', '맥주', '소주', '맥주', '피자']들이 있습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습\n",
+    "bag = ['호박', '감자', '소주', '맥주', '피자']\n",
+    "# 물품 하나를 추가하기. 단, 지정한 물품 바로 뒤에 추가하기\n",
+    "print(f\"바구니에 {bag} 물품이 있습니다.\")\n",
+    "test1 = input('추가 할 물품을 지정해 주세요.')\n",
+    "test2 = input('어느 물품의 뒤에 넣어둘까요?')\n",
+    "bag.insert(bag.index(test2)+1,test1)\n",
+    "print(f'장바구니에는 {bag}들이 있습니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8e196b95-ffe8-4022-9a34-dd18aa8cd770",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "내가 누구게? 숫자를 입력하세요. 777\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "781 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 테스트\n",
+    "num = int(input('내가 누구게? 숫자를 입력하세요.'))\n",
+    "print(num + 4, type(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a205d923-5541-4e2b-855e-c91d9339fafa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "1460.8 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "url = 'https://www.koreaexim.go.kr/site/program/financial/exchangeJSON?authkey=V6nLvpItarPinUqXxkMz40yEICS7bHgt&data=AP01'\n",
+    "res = requests.get(url).text\n",
+    "data = json.loads(res)\n",
+    "print(type(data))\n",
+    "result = (data[-1]['deal_bas_r'])\n",
+    "result1 = result.replace(\",\",\"\")\n",
+    "print(result1,type(result1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "210d45ef-b46a-49a3-b796-d7a6eea84ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "원화로 계산할 달러($)를 입력하세요. :  30\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 1달러는 1460.8원 이므로 30 달러($)는 원화로 43,824.0 원 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 환률 계산기 만들기\n",
+    "chg = float(result1)\n",
+    "dol = int(input(\"원화로 계산할 달러($)를 입력하세요. : \"))\n",
+    "won = dol * chg\n",
+    "print(f\"현재 1달러는 {chg}원 이므로 {dol} 달러($)는 원화로 {won:,} 원 입니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "61d959c6-fb78-41e5-b6bd-8561fafc9c2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5797.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from decimal import Decimal\n",
+    "# rr = 0.1 + 0.2\n",
+    "# result = Decimal(rr)\n",
+    "# print(result)\n",
+    "rr = 1449.4 * 4\n",
+    "print(round(rr,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff28b303-acb4-4343-acc6-d8a2cc37ecb5",
+   "metadata": {},
+   "source": [
+    "## 튜플 자료형"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "719296af-14cb-491c-88b7-24341ad09eee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = ()\n",
+    "t2 = (1, )\n",
+    "t3 = (1, 2, 3)\n",
+    "t4 = 1, 2, 3\n",
+    "t5 = ('a', 'b', ('ab', 'ac'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "7988c8dd-d04d-44a1-a90a-926a7bc5bf3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object doesn't support item deletion",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[51], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 튜플의 요소값을 삭제하려 할 때\u001b[39;00m\n\u001b[0;32m      2\u001b[0m t1 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mt1\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object doesn't support item deletion"
+     ]
+    }
+   ],
+   "source": [
+    "# 튜플의 요소값을 삭제하려 할 때\n",
+    "t1 = (1, 2, 'a', 'b')\n",
+    "del t1[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "8cda117a-2c04-4218-8ec9-c290a89256b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__class_getitem__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'count',\n",
+       " 'index']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(tuple) # tuple()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "1a24673c-e42e-4ad9-bac5-59e3bff8bb35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 b\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 인덱싱하기\n",
+    "t1 = (1, 2, 'a', 'b')\n",
+    "print(t1[0], t1[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "b19f1561-ffb6-47df-9512-1d9f8491722a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 'a', 'b')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 슬라이싱\n",
+    "t1 = (1, 2, 'a', 'b')\n",
+    "print(t1[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3682c843-27d4-4fcf-a530-296833415768",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 'a', 'b', 3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 튜플 더하기\n",
+    "t1 = (1, 2, 'a', 'b')\n",
+    "t2 = (3, 4)\n",
+    "t3 = t1 + t2\n",
+    "print(t3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e3f30ee7-4290-432e-82e0-49cec331a070",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 4, 3, 4, 3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 튜플 곱하기\n",
+    "t2 = 3, 4\n",
+    "t3 = t2 * 3\n",
+    "print(t3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "138e399d-bcef-400c-a1ee-18c0699b7e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(t3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "53b607db-c5fa-4be6-bc4f-7b456b706183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = {'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "2ee49e37-aa76-436b-ab86-7637251166a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pey\n",
+      "010-9999-1234\n",
+      "1118\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dic['name'])\n",
+    "print(dic['phone'])\n",
+    "print(dic['birth'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "28048267-45aa-461d-af7c-7b9741a9d746",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "11\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "al = [11, 22, 33, 44, 55]\n",
+    "at = 11, 22, 33, 44, 55\n",
+    "ad = {0:11,1:22,2:33,3:44,4:55}\n",
+    "print(al[0])\n",
+    "print(at[0])\n",
+    "print(ad[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "58bc3e87-76b8-4c58-bd5e-5f0e146ca122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "22\n",
+      "33\n",
+      "44\n",
+      "55\n",
+      "==========\n",
+      "11\n",
+      "22\n",
+      "33\n",
+      "44\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test\n",
+    "for l in al:\n",
+    "    print(l)\n",
+    "print('='*10)\n",
+    "for t in at:\n",
+    "    print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "935b83ac-1a47-4b2a-a3d8-b25f073d27c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'aa' : [1, 2, 3, 4, 5]}\n",
+    "print(a['aa'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ac0b4711-1391-45f8-8b52-439e98c088a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'010-9999-1234'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic2 = {'aa':{'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118'}}\n",
+    "dic2['aa']['phone']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "bbc785ae-51be-4824-95a5-ffda7cc2ca48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dic = {'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4af8d5b7-db69-4b3e-800b-66724ba1481e",
+   "metadata": {},
+   "source": [
+    "### 딕셔너리 쌍 추가, 삭제하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "496415f3-421b-4eed-a3aa-c9152daf3b5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118', 'address': 'busan'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118'}\n",
+    "dic['address'] = 'busan'\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ec7d725f-f5dc-4c08-a5af-7273f6e779c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118', 'address': 'busan', 'array': [1, 2, 3, 4, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic['array'] = [1, 2, 3, 4, 5]\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1ebe769a-7c5c-4e89-843c-38ed9618d191",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'birth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[75], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mdic\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbirth\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(dic)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'birth'"
+     ]
+    }
+   ],
+   "source": [
+    "del dic['birth']\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b27136f-b0d7-4bb0-bc0b-d167d20a60eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {1:'a', 1:'b'}\n",
+    "a\n",
+    "{1: 'b'}\n"
+   ]
   }
  ],
  "metadata": {
