집합자료형

--- a/python02.ipynb
+++ b/python02.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "76e2ea1e-cf89-4c4e-986a-3fca4bd66835",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "9"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "d9988f21-c0a8-4fcf-8a00-240e8f7cce4a",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "f673a1f1-44f3-4f8d-ae34-dbb6b65a2e57",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "93351748-5483-4b3f-bd1d-2ff43e86c01d",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        " 'sort']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "5dfde9ac-c4af-470a-9c75-239fcebe2f6b",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "fb1cd533-c9ac-4d4f-b404-4e3db59a185f",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "4c37081a-7d7c-46bc-b83e-5fb335a83b07",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "id": "b7f20298-8f3e-41ad-b57d-34b1908ea127",
    "metadata": {},
    "outputs": [],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "bc9b2989-1a3a-4be1-a9d2-1c4c3f919e31",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6]\n"
+      "[1]\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "cd9543e4-2bd5-4286-9b14-911e9ddef872",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "id": "bf0ca669-7420-45ab-b136-eb40c98f85dd",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "4031f879-5d0a-4cac-9382-61ec3e3013b8",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "id": "c74b10ef-1cc7-45e3-a085-7a47afd6376d",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "id": "56ed72ba-65fd-4bea-9a1d-dceb98be8e6b",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "id": "6c7bdea7-dc51-48df-a786-17bb654d1cdb",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "id": "3bd4d619-34c9-410c-930a-12afa2c5e577",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "3"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 40,
    "id": "6422d323-807c-4407-862a-b097ba14dc77",
    "metadata": {},
    "outputs": [
@@ -582,14 +582,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "먹고 싶은 과일을 입력하세요 melon\n"
+      "먹고 싶은 과일을 입력하세요 orange\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "melon 를 좋아하시는 군요!!! 그것은 4번 째에 있습니다.\n"
+      "orange 를 좋아하시는 군요!!! 그것은 3번 째에 있습니다.\n"
      ]
     }
    ],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "id": "4c6fa1f0-4794-4064-890b-5f197055f01f",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "98be3477-e062-4b29-9689-dfec6289ab5e",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "3545a773-3b85-4897-8c50-3ec3e13916aa",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "id": "caca7b5b-3857-4d00-9a8a-80f1c02e703c",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "f5d69fd7-f837-4a4a-afed-81a3323ed37b",
    "metadata": {},
    "outputs": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "9c2f9331-356d-47b1-8d2b-6301e24aad6c",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "b85776de-23b7-4382-b388-8166577d3eb5",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "05ab4c0d-eb55-431d-bba3-0d2313352f2f",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "b6326331-1eb4-41b4-a342-45d0cd8ab9a4",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "d1bbc423-a467-48b4-aee2-506ec09b29bb",
    "metadata": {},
    "outputs": [
@@ -796,14 +796,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "필요한 항목을 넣어주세요. :  술\n"
+      "필요한 항목을 넣어주세요. :  사과\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "장바구니에는 ['호박', '감자', '술']들이 있습니다.\n"
+      "장바구니에는 ['사과']들이 있습니다.\n"
      ]
     }
    ],
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "a205d923-5541-4e2b-855e-c91d9339fafa",
    "metadata": {},
    "outputs": [
@@ -981,7 +981,8 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
-      "1460.8 <class 'str'>\n"
+      "1460.8 <class 'str'>\n",
+      "오늘의 환율은 1달러($)에 1460.8원  입니다.\n"
      ]
     }
    ],
@@ -994,7 +995,8 @@
     "print(type(data))\n",
     "result = (data[-1]['deal_bas_r'])\n",
     "result1 = result.replace(\",\",\"\")\n",
-    "print(result1,type(result1))"
+    "print(result1,type(result1))\n",
+    "print(f'오늘의 환율은 1달러($)에 {result1}원  입니다.')"
    ]
   },
   {
@@ -1097,55 +1099,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "8cda117a-2c04-4218-8ec9-c290a89256b6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__add__',\n",
-       " '__class__',\n",
-       " '__class_getitem__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__getnewargs__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__rmul__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " 'count',\n",
-       " 'index']"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir(tuple) # tuple()"
    ]
@@ -1252,6 +1209,14 @@
    ],
    "source": [
     "len(t3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49f16dd3-7a48-4984-8708-f8618bd68073",
+   "metadata": {},
+   "source": [
+    "## 딕셔너리 자료형"
    ]
   },
   {
@@ -1467,15 +1432,374 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7b27136f-b0d7-4bb0-bc0b-d167d20a60eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'b'}\n"
+     ]
+    }
+   ],
    "source": [
     "a = {1:'a', 1:'b'}\n",
-    "a\n",
-    "{1: 'b'}\n"
+    "print(a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f8a6951-0e0c-4cb4-a328-e4301c5b928f",
+   "metadata": {},
+   "source": [
+    "### 딕셔너리 관련함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "517de448-17c1-4de0-85ca-2524c1d98f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'phone', 'birth', 'address', 'array'])\n",
+      "dict_values(['pey', '010-9999-1234', '1118', 'busan', [1, 2, 3, 4, 5]])\n",
+      "dict_items([('name', 'pey'), ('phone', '010-9999-1234'), ('birth', '1118'), ('address', 'busan'), ('array', [1, 2, 3, 4, 5])])\n",
+      "{'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118', 'address': 'busan', 'array': [1, 2, 3, 4, 5]}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118', 'address': 'busan', 'array': [1, 2, 3, 4, 5]}\n",
+    "# key 리스트 만들기 - keys\n",
+    "print(a.keys())\n",
+    "# value 리스트 만들기 - values\n",
+    "print(a.values())\n",
+    "# key, value 쌍 얻기 - items\n",
+    "print(a.items())\n",
+    "print(a)\n",
+    "# key, value 쌍 모두 지우기\n",
+    "a.clear()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3536b1d9-d659-4636-97dc-da32a733e004",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "phone\n",
+      "birth\n",
+      "address\n",
+      "array\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in a.keys():\n",
+    "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "3fa45e2f-10d6-4cf8-b05f-5fbbc07221c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pey\n",
+      "None\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'money'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[53], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msuper\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmoney\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'money'"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118', 'address': 'busan', 'array': [1, 2, 3, 4, 5]}\n",
+    "print(a.get('name'))\n",
+    "print(a.get('super'))\n",
+    "print(a['money'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fea8e7c9-5856-4d57-a756-bca57f305697",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'name': 'pey', 'phone': '010-9999-1234', 'birth': '1118', 'address': 'busan', 'array': [1, 2, 3, 4, 5]}\n",
+    "print('name' in a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4b2087bc-8e81-4a74-8045-23290b42359b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "al = [11, 22, 33, 44, 55]\n",
+    "at = 11, 22, 33, 44, 55\n",
+    "ad = {0:11,1:22,2:33,3:44,4:55}\n",
+    "\n",
+    "print(22 in al) # 리스트\n",
+    "print(99 in at) # 튜플\n",
+    "print(1 in ad) # 딕셔너리 키"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7221f2c5-01ed-4329-a215-423e95a7a30c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0과 1사이의 랜덤소수 0.7378639976540288\n",
+      "1과 100사이의 랜덤실수 98\n",
+      "오늘의 점심 메뉴는? 후문편의점\n",
+      "[6, 9, 3, 10, 7, 8, 4, 1, 5, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실습 random 모듈\n",
+    "import random\n",
+    "menu = [\"구내식당\", \"후문편의점\", \"자가도시락\", \"굶기\", \"과자\"]\n",
+    "\n",
+    "num1 = random.random()\n",
+    "print(f'0과 1사이의 랜덤소수 {num1}')\n",
+    "num2 = random.randint(1,100)\n",
+    "print(f'1과 100사이의 랜덤실수 {num2}')\n",
+    "lunch = random.choice(menu)\n",
+    "print(f'오늘의 점심 메뉴는? {lunch}')\n",
+    "deck = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "random.shuffle(deck)\n",
+    "print(deck)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16af80b6-2f81-46b8-a06b-0d31042a7ca7",
+   "metadata": {},
+   "source": [
+    "## 집합 자료형"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c7b9f3a0-4414-4a9f-be8f-aa142456cfbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3} <class 'set'>\n",
+      "{'H', 'o', 'e', 'l'} <class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 중복을 허용 하지 않는다.\n",
+    "# 순서가 없다.\n",
+    "s1 = set([1,2,3])\n",
+    "print(s1,type(s1))\n",
+    "s2 = set(\"Hello\")\n",
+    "print(s2,type(s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9093e812-b917-4d9b-a3af-647a706a8141",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 11, 22] <class 'list'>\n",
+      "(33, 11, 22) <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 집합 자료형의 특징\n",
+    "s1 = set([11, 22, 33, 11, 22])\n",
+    "l1 = list(s1)\n",
+    "print(l1, type(l1))\n",
+    "t1 = tuple(s1)\n",
+    "print(t1, type(t1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d8e83f7-b709-4461-8321-78950d625785",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5, 6}\n",
+      "{4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = set([1, 2, 3, 4, 5, 6])\n",
+    "s2 = set([4, 5, 6, 7, 8, 9])\n",
+    "print(s1 & s2)\n",
+    "print(s1.intersection(s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2e9be943-0daf-4bbf-a716-9593aaba95af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 합집합\n",
+    "print(s1 | s2)\n",
+    "print(s1.union(s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "06722d7c-3a52-4538-85ed-0f3f3ade91eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "{8, 9, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 차집합\n",
+    "print(s1 - s2)\n",
+    "print(s2 - s1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d118392-58ed-432c-b57a-dd478af72c5d",
+   "metadata": {},
+   "source": [
+    "### 집합 자료형 관련 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "71b91237-3fed-4b88-89c5-a1bd5d4a9571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 값 1개 추가하기 - add\n",
+    "s1 = set([1,2,3])\n",
+    "s1.add(4)\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a64e865e-0bd8-451f-b1ad-d204b3067202",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 값 여러개 추가하기 - update\n",
+    "s1 = set([1, 2 ,3])\n",
+    "s1.update([4, 5, 6])\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56f3af5c-906e-4b13-9dd1-f5ba238e3298",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
