--- a/python02.ipynb
+++ b/python02.ipynb
@@ -1794,9 +1794,334 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea774a07-5cd4-499c-902e-67ce5a349319",
+   "metadata": {},
+   "source": [
+    "## 불자료형"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c66ef2a5-941b-4ab1-a36e-182e794b3080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# True : 참을 뜻한다. (1)\n",
+    "# False : 거짓을 의미한다. (0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5479fa6c-b5e8-4c56-8f71-b0e459e9fa26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(True))\n",
+    "print(type(False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3e79aa08-2e65-483d-9e2d-4fc70b476136",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 > 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "83862f67-214e-419d-8216-8bb8804f9fcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 자료형의 참과 거짓\n",
+    "print(bool(\"python\"))\n",
+    "print(bool(\"\"))\n",
+    "print(bool([1, 2, 3]))\n",
+    "print(bool([]))\n",
+    "print(bool((1, 2, 3)))\n",
+    "print(bool(()))\n",
+    "print(bool({'a':1}))\n",
+    "print(bool({}))\n",
+    "print(bool(1))\n",
+    "print(bool(0))\n",
+    "print(bool(None))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "20aec500-a663-4c45-9201-3fa42ac80a64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "어느 날, 명석한 탐정는 먼 우주 행성에서 모험을 떠나 숨겨진 보물을 발견했다. 그리고 신나는 선생님는 먼 우주 행성에서 무시무시한 용과 싸웠다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random 으로 스토리 생성기 만들기\n",
+    "\n",
+    "# 등장인물 리스트\n",
+    "characters = [\"용감한기사\", \"모험심 넘치는 고양이\", \"호기심 많은 로봇\", \"서투른 마법사\", \"명석한 탐정\", \"신나는 선생님\"]\n",
+    "places = [\"어두운 숲에서\", \"먼 우주 행성에서\", \"마법의 성에서\", \"바닷속 도시에서\", \"귀신이 나오는 흉가에서\", \"재밌는 교실에서\"]\n",
+    "events = [\"숨겨진 보물을 발견했다.\", \"무시무시한 용과 싸웠다.\", \"비밀 통로를 발견했다.\", \"고대의 미스터리를 풀었다.\", \"왕국을 위험에서 구하였다.\", \"꾸안꾸로 다녔다.\"]\n",
+    "\n",
+    "ch = random.choice(characters)\n",
+    "pl = random.choice(places)\n",
+    "ev = random.choice(events)\n",
+    "\n",
+    "ch1 = random.choice(characters)\n",
+    "pl1 = random.choice(places)\n",
+    "ev1 = random.choice(events)\n",
+    "\n",
+    "print(f\"어느 날, {ch}는 {pl} 모험을 떠나 {ev} 그리고 {ch1}는 {pl1} {ev1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "664ba11a-dd52-4081-bd66-8d1a8a1a2ea2",
+   "metadata": {},
+   "source": [
+    "# 자료형의 값을 저장하는 공간, 변수"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24320bff-3c8b-47f9-bb3a-cf5689be3205",
+   "metadata": {},
+   "source": [
+    "## 리스트의 옅은복사 깊은복사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f11b1a33-c66f-44f8-96d1-605209b1eb21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3] 1296814755648\n",
+      "[1, 2, 3] 1296814755648\n",
+      "[1, 7, 3] 1296814755648\n",
+      "[1, 7, 3] 1296814755648\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = a\n",
+    "print(a, id(a))\n",
+    "print(b, id(b))\n",
+    "b[1] = 7\n",
+    "print(a,id(a))\n",
+    "print(b,id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b08ddb7d-c44e-4672-a244-892c311f63c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5879265e-6864-4fca-bd1a-9cdf4ec442b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 22, 33] 1296814687488\n",
+      "[11, 22, 33] 1296814689728\n",
+      "[11, 22, 33] 1296814687488\n",
+      "[11, 77, 33] 1296814689728\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import copy\n",
+    "c = [11, 22, 33]\n",
+    "# d = copy(c)\n",
+    "# d = c[:]\n",
+    "d = c.copy()\n",
+    "print(c, id(c))\n",
+    "print(d, id(d))\n",
+    "d[1] = 77\n",
+    "print(c,id(c))\n",
+    "print(d, id(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "db569670-bebc-4a8c-8484-29a564234385",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c is d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c02b940f-4155-4c47-98f8-20a76b119ede",
+   "metadata": {},
+   "source": [
+    "## 변수를 만드는 여러가지 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b1eeb33c-3da1-41ac-8700-bf6d614167dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "파이썬 짱짱\n",
+      "배고파 밥줘\n"
+     ]
+    }
+   ],
+   "source": [
+    "a , b = \"파이썬\" , \"짱짱\"\n",
+    "[c, d] = [\"배고파\", \"밥줘\"]\n",
+    "print(a, b)\n",
+    "print(c, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "21e2caec-a628-4e22-a494-4e7796acf484",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 7\n",
+      "7 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 7\n",
+    "print(a, b)\n",
+    "a, b = b, a\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "20c3d576-6517-463d-923e-8e2763682654",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33 77\n",
+      "77 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 33\n",
+    "b = 77\n",
+    "print(a, b)\n",
+    "temp = a\n",
+    "a = b\n",
+    "b = temp\n",
+    "print(a, b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56f3af5c-906e-4b13-9dd1-f5ba238e3298",
+   "id": "1ea1325d-32e0-4833-986c-7ac48eeca459",
    "metadata": {},
    "outputs": [],
    "source": []
